--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -56,7 +56,7 @@
 }
 
 .Todo-list {
-
+    
     li {
         list-style: none;
         width: 100%;
@@ -69,7 +69,7 @@
         word-break: break-word;
 
         // &:hover{
-        //     background-color: rgb(26, 24, 24);
+        //     background-color:black;
         //     color: white;
         // }
     }
@@ -83,20 +83,40 @@
     }
 
     .check {
-        position: absolute;
         display: none;
+        position: absolute;
+        cursor: pointer;
+        opacity: 0;
+
+        &:hover{
+            opacity: 1;
+        }
+    }
+
+    .check-active{
+        text-decoration: line-through;
     }
 
     .delete {
-        //display: none;
         cursor: pointer;
         position: absolute;
         right: 0;
-        color: black;
+        color: #535353;
 
         &:hover:before {
-            display: inline-block;
-            color: #f3f3f3;
+            display: block;
+            color: black;
         }
     }
+}
+
+.info{
+    background: #f3f3f3;
+    border: solid 1px #a9a6a6;
+    border-radius: 4px;
+    padding: 15px 25px;
+    font-size: 0.95rem;
+    line-height: 1.3;
+    color: #535353;
+    margin-top: 30px;
 }
